# speakerbox

./: .buildinfo  .cookiecutter.yaml  .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Justfile  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  contributing.html  diarize.py  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  pyannote.ipynb  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  speakerbox.bin.html  speakerbox.datasets.html  speakerbox.html  speakerbox.steps.html  speakerbox.steps.raw.html  test.py  tox.ini
.doctrees/: contributing.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  speakerbox.datasets.doctree  speakerbox.doctree
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-docs.yml  build-main.yml  build-master.yml  check-pr.yml  ci.yml  docs.yml  paper.yml  publish.yml  test-and-lint.yml
_modules/: index.html  speakerbox.html
_modules/dataclasses_json/: api.html
_modules/speakerbox/: datasets.html  examples.html  main.html  preprocess.html  types.html  utils.html
_modules/speakerbox/datasets/: seattle_2021_proto.html
_modules/speakerbox/steps/raw/: raw.html
_sources/: index.rst.txt  installation.rst.txt  speakerbox.bin.rst.txt  speakerbox.datasets.rst.txt  speakerbox.rst.txt  speakerbox.steps.raw.rst.txt  speakerbox.steps.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst
paper/: paper.bib  paper.md
scripts/: download_cdp_dataset.py  pull-and-diarize-seattle-2021.py  pull-best-seattle-model.py  train-seattle-2021.py
speakerbox/: __init__.py  datasets.py  example.py  examples.py  main.py  preprocess.py  preprocessing.py  types.py  utils.py
speakerbox/annotation/: __init__.py  audio_annotator.py
speakerbox/datasets/: seattle_2021_proto.py  types.py  utils.py
speakerbox/ds/: __init__.py  seattle_2021_proto.py  utils.py
speakerbox/steps/raw/: __init__.py  raw.py
speakerbox/tests/: __init__.py  conftest.py  test_datasets.py  test_empty.py  test_function.py  test_preprocess.py  test_raw.py  test_train.py
speakerbox/tests/data/: __init__.py  example_values.json
